PA-1: otel.span.* alignment — production moves and builder isolation.
Move otel.manual/enrichment/naming to symmetric otel.span.* tree with
DefaultSpanSpecFactory and DefaultSpanBuilderFactory composition.
Enforce 63-FQCN allowlist, builder isolation ArchUnit, otelManualPackageVerify,
and pa1PublishedArtifactConsumerVerify with provenance.
Delete ScopedExecution; inline SpanLifecycle.

Co-authored-by: Cursor <cursoragent@cursor.com>